Thu Jul 25 12:04:32 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* admin_internal.h (_KADM5_CHECK_HANDLE): Add parenthesis around
		assignment used as truth value to reduce gcc -Wall flames.

	* misc_free.c (kadm5_free_name_list, krb5_free_key_data_contents: 
		Add KADM5_OK return value upon success.


Wed Jul 24 18:18:39 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* Makefile.in, configure.in: fix shared lib lossage by
		rearrangement of subdirectories

Tue Jul 23 16:49:56 1996  Tom Yu  <tlyu@voltage-multiplier.mit.edu>

	* Makefile.in: delete extraneous trailing backslash from GENSRCS
		and GENOBJS

Mon Jul 22 04:17:23 1996  Marc Horowitz  <marc@mit.edu>

	* configure.in (LIBS): add -lgen to LIBS whenever compile is
 	found.  Solaris requires it.

	* chpass_util.c (_kadm5_chpass_principal_util): the calls to
 	kadm5_free_{princicpal,policy}_ent used server_handle instead of
 	lhandle, which caused problems in the api versioning code.

Thu Jul 18 19:50:39 1996  Marc Horowitz  <marc@mit.edu>

	* configure.in: removed ET_RULES, replaced with AC_PROG_AWK

Mon Jul 15 16:52:44 1996  Barry Jaspan  <bjaspan@mit.edu>

	* client_init.c (_kadm5_init_any): use krb5_get_in_tkt_keytab
 	instead of changing krb5_defkeyname

Mon Jul 15 16:36:02 1996  Marc Horowitz  <marc@mit.edu>

	* Makefile.in (CLNTOBJS), AC_REPLACE_FUNCS: check for setenv, and
 	link against setenv.o if it's needed.

Fri Jul 12 15:06:48 1996  Marc Horowitz  <marc@mit.edu>

	* svr_iters.c (glob_to_regexp:append_realm): the semantics and
 	code were somewhat confused.  they are now fixed.

	* logger.c (HAVE_*): turn all the "#if HAVE_*" into
	"#ifdef HAVE_*"

	* configure.in (AC_CHECK_FUNCS): check for the functions which
 	logger.c checks for.

	* svr_principal.c (kadm5_get_principal): due to the the api
 	versioning, it is possible for this function to be called with a
 	three argument prototype.  in this case, do not modify mask,
 	because this will clobber the stack on some platforms.
